<resources>
    <string name="app_name">PlayList Maker</string>
    <string name="playlist_maker">PlayList Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/\n</string>
    <string name="support_address">asd@asd.ru</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker\n\n</string>
    <string name="support_user_agreement">https://yandex.ru/legal/practicum_offer/</string>



    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="check_internet_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry_button">Обновить</string>

    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>


    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play">Проиграть</string>
    <string name="pause">Пауза</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="playing_time">00:30</string>
    <string name="album_icon">Обложка альбома</string>

    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="favorites_empty">У вас нет избранных треков</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>

    <string name="new_playlist_screen_title">Новый плейлист</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="playlist_cover_add_description">Добавить обложку плейлиста</string>
    <string name="playlist_cover_preview_description">Обложка плейлиста</string>

    <string name="discard_new_playlist_title">Завершить создание плейлиста?</string>
    <string name="discard_new_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="discard_new_playlist_cancel">Отмена</string>
    <string name="discard_new_playlist_confirm">Завершить</string>
    <string name="playlist_created_toast">Плейлист %1$s создан</string>
    <string name="playlist_save_error">Не удалось сохранить плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_empty_tracks">В этом плейлисте нет треков</string>
    <string name="playlist_detail_share">Поделиться плейлистом</string>
    <string name="playlist_detail_more">Меню плейлиста</string>
    <string name="delete_track_from_playlist_title">Хотите удалить трек?</string>
    <string name="dialog_no">НЕТ</string>
    <string name="dialog_yes">ДА</string>
    <string name="playlist_share_empty_error">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="dialog_no_short">Нет</string>
    <string name="dialog_yes_short">Да</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_delete">Удалить</string>
    <string name="edit_playlist_screen_title">Редактировать</string>
    <string name="save_playlist">Сохранить</string>

    <plurals name="playlist_track_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="playlist_duration_minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

</resources>