<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/settings_screen_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="24dp"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="@color/settings_text_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/settings_text_color"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_22" />

    </com.google.android.material.appbar.MaterialToolbar>

    <Switch
        android:id="@+id/switch_dark_theme"
        style="@style/SettingsBtn"
        android:paddingVertical="@dimen/padding_20"
        android:paddingHorizontal="@dimen/padding_16"
        android:text="@string/dark_theme"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:thumbTint="@color/settings_switch"
        android:trackTint="@color/settings_switch" />

    <Button
        android:id="@+id/button_sharing"
        style="@style/SettingsBtn"
        android:paddingVertical="@dimen/padding_20"
        android:paddingHorizontal="@dimen/padding_16"
        android:text="@string/share"
        app:icon="@drawable/share" />

    <Button
        android:id="@+id/button_support"
        style="@style/SettingsBtn"
        android:paddingVertical="@dimen/padding_20"
        android:paddingHorizontal="@dimen/padding_16"
        android:text="@string/support"
        app:icon="@drawable/support" />

    <Button
        android:id="@+id/button_user_agreement"
        style="@style/SettingsBtn"
        android:paddingVertical="@dimen/padding_20"
        android:paddingHorizontal="@dimen/padding_16"
        android:text="@string/user_agreement"
        app:icon="@drawable/arrow_forward" />

</LinearLayout>
