<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:id="@+id/activity_main"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="14dp"
        android:gravity="top"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="@dimen/header_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="17dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="@dimen/margin"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:foreground="?attr/selectableItemBackground"
            android:letterSpacing="0"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/header_text_size"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/text_color" />

        <Button
            android:id="@+id/btn_media"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="@dimen/margin"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:foreground="?attr/selectableItemBackground"
            android:letterSpacing="0"
            android:text="@string/library"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/header_text_size"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/text_color" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:foreground="?attr/selectableItemBackground"
            android:letterSpacing="0"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/header_text_size"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/text_color" />
    </LinearLayout>
</LinearLayout>
