<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".AudioplayerActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/player_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/margin_24"
        android:layout_marginStart="@dimen/margin_4"
        app:layout_constraintBottom_toTopOf="@id/track_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="@color/toolbar_color" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/track_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_24"
        android:contentDescription="@string/album_icon"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_512"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_toolbar" />

    <TextView
        android:id="@+id/trackName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintBottom_toTopOf="@id/artistName"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_icon"
        tools:text="Track Name" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_54"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/text_size_14"
        android:textFontWeight="400"
        app:layout_constraintBottom_toTopOf="@id/button_add_to_playlist"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        tools:text="Artist name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_to_playlist"
        android:layout_width="@dimen/size_button"
        android:layout_height="@dimen/size_button"
        android:layout_marginStart="@dimen/margin_8"
        android:contentDescription="@string/add_to_playlist"
        android:foregroundGravity="center"
        android:src="@drawable/playlist"
        app:backgroundTint="?attr/button_player"
        app:elevation="0dp"
        app:fabCustomSize="@dimen/size_button"
        app:layout_constraintBottom_toBottomOf="@id/play_track"
        app:layout_constraintEnd_toStartOf="@id/play_track"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintTop_toTopOf="@id/play_track"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play_track"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:contentDescription="@string/play"
        android:foregroundGravity="center"
        android:src="@drawable/play"
        app:backgroundTint="?attr/colorOnSecondary"
        app:elevation="0dp"
        app:fabCustomSize="84dp"
        app:layout_constraintBottom_toTopOf="@id/duration"
        app:layout_constraintEnd_toStartOf="@id/button_add_to_favorites"
        app:layout_constraintStart_toEndOf="@id/button_add_to_playlist"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:maxImageSize="64dp"
        app:tint="?attr/colorSecondary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_to_favorites"
        android:layout_width="@dimen/size_button"
        android:layout_height="@dimen/size_button"
        android:layout_marginEnd="@dimen/margin_8"
        android:contentDescription="@string/add_to_favorites"
        android:foregroundGravity="center"
        android:src="@drawable/favorites"
        app:backgroundTint="?attr/button_player"
        app:elevation="0dp"
        app:fabCustomSize="@dimen/size_button"
        app:layout_constraintBottom_toBottomOf="@id/play_track"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/play_track"
        app:layout_constraintTop_toTopOf="@id/play_track"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/playing_time"
        android:textColor="@color/player_text_color"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/play_track"
        app:layout_constraintWidth_max="64dp" />

    <TextView
        android:id="@+id/duration"
        style="@style/TitleTrack"
        android:text="@string/track_time"
        app:layout_constraintTag="durationTag"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/progress"
        app:layout_constraintBottom_toTopOf="@id/album" />

    <TextView
        android:id="@+id/album"
        style="@style/TitleTrack"
        android:text="@string/album"
        app:layout_constraintTag="albumTag"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintBottom_toTopOf="@id/year" />

    <TextView
        android:id="@+id/year"
        style="@style/TitleTrack"
        android:text="@string/year"
        app:layout_constraintTag="yearTag"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/album"
        app:layout_constraintBottom_toTopOf="@id/genre" />

    <TextView
        android:id="@+id/genre"
        style="@style/TitleTrack"
        android:text="@string/genre"
        app:layout_constraintTag="genreTag"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintBottom_toTopOf="@id/country" />

    <TextView
        android:id="@+id/country"
        style="@style/TitleTrack"
        android:layout_marginBottom="@dimen/margin_28"
        android:text="@string/country"
        app:layout_constraintTag="countryTag"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="durationTag, albumTag, yearTag, genreTag, countryTag" />

    <TextView
        android:id="@+id/trackTime"
        style="@style/DataTrack"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        app:layout_constraintStart_toEndOf="@id/textBarrier"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/duration"
        app:layout_constraintBottom_toBottomOf="@id/duration"
        tools:text="0:00" />

    <TextView
        android:id="@+id/album_name"
        style="@style/DataTrack"
        app:layout_constraintStart_toEndOf="@id/textBarrier"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/album"
        app:layout_constraintBottom_toBottomOf="@id/album"
        tools:text="Название альбома" />

    <TextView
        android:id="@+id/release_date_data"
        style="@style/DataTrack"
        app:layout_constraintStart_toEndOf="@id/textBarrier"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toBottomOf="@id/year"
        app:layout_constraintTop_toTopOf="@id/year"
        tools:text="1994" />

    <TextView
        android:id="@+id/primary_genre_name"
        style="@style/DataTrack"
        app:layout_constraintStart_toEndOf="@id/textBarrier"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/genre"
        app:layout_constraintBottom_toBottomOf="@id/genre"
        tools:text="Название жанра" />

    <TextView
        android:id="@+id/country_data"
        style="@style/DataTrack"
        app:layout_constraintStart_toEndOf="@id/textBarrier"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/country"
        app:layout_constraintBottom_toBottomOf="@id/country"
        tools:text="Название страны" />

</androidx.constraintlayout.widget.ConstraintLayout>





