<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textColor="@color/toolbar_color"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_22" />
    </com.google.android.material.appbar.MaterialToolbar>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_16">

        <EditText
            android:id="@+id/input_search_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/padding_10"
            android:drawableTint="@color/search_form_text_hint_color"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:inputType="text"
            android:lines="1"
            android:maxLength="255"
            android:padding="@dimen/padding_8"
            android:paddingStart="@dimen/padding_8"
            android:paddingEnd="32dp"
            android:textColor="@color/search_form_text_color"
            android:textColorHint="@color/search_form_text_hint_color"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/clear_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="12dp"
            android:src="@drawable/clear"
            android:visibility="invisible"
            app:tint="@color/search_form_text_hint_color" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_search_recycler" />

        <TextView
            android:id="@+id/placeholderNothingWasFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="20dp"
            android:text="@string/nothing_found"
            android:textAlignment="center"
            android:textColor="@color/text_color_primary"
            android:textSize="19sp"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/nothingfound" />

        <LinearLayout
            android:id="@+id/placeholderCommunicationsProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/connection_problem"
                android:src="@drawable/nointernet" />

            <TextView
                style="@style/ErrorTextPlaceholder"
                android:text="@string/connection_problem" />

            <TextView
                style="@style/ErrorTextPlaceholder"
                android:text="@string/check_internet_connection" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_retry"
                style="@style/ErrorButtonPlaceholder"
                android:text="@string/retry_button"
                app:cornerRadius="54dp" />
        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/searchProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="160dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/progress_indicator_color"
            app:indicatorSize="48dp"
            app:trackThickness="4dp" />

        <LinearLayout
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/search_history"
                android:textColor="?attr/colorOnSecondary"
                android:textFontWeight="500"
                android:textSize="@dimen/text_size_19" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewHistory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_search_recycler" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_clear_history"
                        style="@style/ErrorButtonPlaceholder"
                        android:layout_marginStart="@dimen/margin_24"
                        android:layout_marginTop="@dimen/margin_24"
                        android:layout_marginEnd="@dimen/margin_24"
                        android:layout_marginBottom="@dimen/margin_24"
                        android:inputType="textCapSentences"
                        android:text="@string/clear_history" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>

